# ChangeLog for sys-boot/grub
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/ChangeLog,v 1.216 2012/06/28 22:36:53 floppym Exp $

  28 Jun 2012; Mike Gilbert <floppym@gentoo.org> files/grub.default-2:
  Fix typos in grub.default, #424005 by Chris Mayo.

  28 Jun 2012; Mike Gilbert <floppym@gentoo.org> grub-2.00.ebuild:
  Add ewarn message with instructions for adding grub:0 to the world file.

*grub-2.00 (28 Jun 2012)

  28 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> +files/grub.default-2,
  -grub-2.00_beta0.ebuild, -grub-2.00_beta1.ebuild, -grub-2.00_beta2.ebuild,
  -grub-2.00_beta2-r1.ebuild, -grub-2.00_beta3.ebuild,
  -grub-2.00_beta3-r2.ebuild, -grub-2.00_beta5.ebuild, -grub-2.00_rc1.ebuild,
  +grub-2.00.ebuild, grub-9999.ebuild:
  Version bump to 2.00. Depend also on dejavu (otherwise starfield is not
  distributed). Add info about themes to default config file. Remove older
  betas/rcs apart from latest beta to ensure fallback if 2.00 has regressions.

*grub-2.00_rc1 (25 Jun 2012)

  25 Jun 2012; Mike Gilbert <floppym@gentoo.org> +grub-2.00_rc1.ebuild,
  grub-9999.ebuild:
  Version bump. Tweak efiemu configure option, bug 422835 by Rafał Mużyło.

  17 Jun 2012; Mike Gilbert <floppym@gentoo.org> metadata.xml:
  Remove redundant maintainer node.

  09 Jun 2012; Mike Gilbert <floppym@gentoo.org> grub-9999.ebuild:
  Stub out autopoint before calling eautoreconf.

  05 Jun 2012; Mike Gilbert <floppym@gentoo.org> grub-9999.ebuild:
  Call autoreconf directly (via autogen.sh) since eautoreconf insists on callign
  autopoint. Bug 418081.

*grub-2.00_beta6 (02 Jun 2012)

  02 Jun 2012; Mike Gilbert <floppym@gentoo.org> +grub-2.00_beta6.ebuild,
  grub-9999.ebuild:
  Version bump. Fix links in grub2.info. #416035 by Martin Väth.

  02 Jun 2012; Mike Frysinger <vapier@gentoo.org> grub-0.97-r12.ebuild:
  Expand insns for creating grub-static binpkg so it runs more smoothly.
