@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/Attic/grub-2.00.ebuild,v 1.2 2012/06/28 14:54:59 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-boot/grub/Attic/grub-2.00.ebuild,v 1.3 2012/06/29 02:51:54 floppym Exp $
 
 EAPI=4
 
@@ -69,7 +69,7 @@ RDEPEND="
 DEPEND="${RDEPEND}
 	>=dev-lang/python-2.5.2
 	sys-devel/flex
-	virtual/yacc
+	sys-devel/bison
 	sys-apps/texinfo
 	static? (
 		truetype? (
